# anonymi

./: .gitignore  CMakeLists.txt  README.md  anonymi_prepare.sh  run_subject.sh  watch_and_run.sh
Anonymi/: AnonyMI_Terms_and_Conditions.txt  Anonymi.py  Anonymi_Manual.md  CMakeLists.txt  Freesurfer_License_Agreement.txt
Anonymi/Resources/: IXI_earR_control.fcsv  anonymi_cli.py  run_anonymi.py  template.mgz  template_earL_control.fcsv  template_earR_control.fcsv  template_face_control.fcsv  template_model.vtk
Anonymi/Resources/average/: rigidly_aligned_brain_template.tif
Anonymi/Resources/lib/bem/: ic1.tri  ic2.tri  ic3.tri  ic4.tri  ic5.tri  ic6.tri
Anonymi/Resources/lib/gcc/lib/: libgcc_s.1.dylib  libgfortran.3.dylib  libgomp.1.dylib  libquadmath.0.dylib  libstdc++.6.dylib
Anonymi/Resources/shell/: anonymi_prepare.sh  run_fs.sh
Anonymi/Resources/templates/: IXI_earL_control.fcsv  IXI_face_control.fcsv
